Table and major update

--- a/src/app/mapping/mapping.component.html
+++ b/src/app/mapping/mapping.component.html
@@ -1,1 +1,9 @@
-<div id="map" class="map"></div>
+<mat-sidenav-container class="sidenavContainer">
+    <mat-sidenav class="sidenav" position = "start" mode = "side" opened>
+        <p>Amigo estou aqui</p>
+    </mat-sidenav>
+    
+    <mat-sidenav-content>
+        <div id="map" class="map"></div>
+    </mat-sidenav-content>
+</mat-sidenav-container>
