--- a/src/app/mapping/mapping.component.css
+++ b/src/app/mapping/mapping.component.css
@@ -2,3 +2,16 @@
     width: 100%;
     height: 600px;
 }
+.sidenavContainer{
+    margin-top: 8vh;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+.sidenav{
+    width: 15%;
+    text-align: center;
+    background-color: whitesmoke;
+}
