--- a/src/app/mapping/mapping.component.css
+++ b/src/app/mapping/mapping.component.css
@@ -1,6 +1,6 @@
 .map{
     width: 100%;
-    height: 600px;
+    height: 92vh;
 }
 .sidenavContainer{
     margin-top: 8vh;
@@ -11,7 +11,21 @@
     right: 0;
 }
 .sidenav{
-    width: 15%;
+    width: 13%;
     text-align: center;
     background-color: whitesmoke;
+}
+.sidenavTitle{
+    text-align: center;
+    font-size: 140%;
+}
+.mat-expansion-panel{
+    border-radius: 7px;
+}
+.warningText{
+    text-align: center;
+}
+.layerInfo{
+    text-align: center;
+    max-width: 100%;
 }
