--- a/src/app/mapping/mapping.component.css
+++ b/src/app/mapping/mapping.component.css
@@ -29,3 +29,10 @@
     text-align: center;
     max-width: 100%;
 }
+.mat-radio-button{
+    margin-bottom: 1vh;
+}
+.mapSelection{
+    text-align: left;
+    margin-left: 16%;
+}
