--- a/src/app/mapping-module/mapping/mapping.component.html
+++ b/src/app/mapping-module/mapping/mapping.component.html
@@ -58,6 +58,8 @@
                         Legenda do Mapa
                     </mat-panel-title>
                 </mat-expansion-panel-header>
+
+                <button mat-flat-button color = "primary" (click) = "openGradientDialog()">Gradiente</button>
             </mat-expansion-panel>
         </mat-accordion>
     </mat-sidenav>
