Layer export and Layer editor

--- a/src/app/mapping-module/mapping/mapping.component.html
+++ b/src/app/mapping-module/mapping/mapping.component.html
@@ -62,6 +62,7 @@
                 <button mat-flat-button color = "primary" (click) = "openGradientDialog()">Gradiente</button>
             </mat-expansion-panel>
         </mat-accordion>
+        <button mat-flat-button color = "primary" (click) = "downloadRectifiedLayerTxt()">Download .txt</button>
     </mat-sidenav>
     
     <mat-sidenav-content>
