--- a/src/app/management-zone-editor/editor-table/editor-table.component.html
+++ b/src/app/management-zone-editor/editor-table/editor-table.component.html
@@ -11,6 +11,14 @@
         <br>
         <br>
         <br>
+        <div class="subtitleAndEditButton">
+            <span class="subtitle">Pontos Amostrais</span>
+            <div style="margin-right: 10%;">
+                <mat-slide-toggle [(ngModel)] = "isEditing" (change) = "turnOffEditing($event)" [checked] = "isEditing">
+                    Editar dados
+                </mat-slide-toggle>
+            </div>
+        </div>
         <table mat-table [dataSource] = "dataSource" class = "mat-elevation-z8">
             <ng-container matColumnDef = index>
                 <th mat-header-cell class="tableHeader" *matHeaderCellDef>Índice</th>
@@ -37,9 +45,10 @@
                 <th mat-header-cell class="tableHeader" *matHeaderCellDef>{{layer.header3}}</th>
                 <td mat-cell *matCellDef = "let element; let i = index">  
                     <div *ngIf="isEditing">
-                        <mat-form-field id="sampling{{i}}">
-                            <input type = "number" 
-                                matInput [value] ="element.data">
+                        <mat-form-field [ngClass]="validateNewSamplingValue(element.data) ? 'validInput' : 'invalidInput' "
+                            id="sampling{{i}}">
+                              <input type = "number" matInput (change) = "editDataInput($event, i)" (keyup) = "editDataInput($event, i)"
+                                [value] ="element.data">
                         </mat-form-field>
                     </div>
                     <div *ngIf="!isEditing">
@@ -54,11 +63,12 @@
 
         <div class="tablePaginator">
             Página {{actualTablePage}} de {{totalTablePages}}
-            <button mat-icon-button color = "primary" [disabled] = "exhibitedUpperIndex <= quantityExhibitedSP">
-                <span class="material-icons">west</span>
+            <button mat-icon-button [disabled] = "exhibitedUpperIndex <= quantityExhibitedSP" (click) = "tablePaginatorPreviousPage()"
+                color = "primary">
+                  <span class="material-icons">west</span>
             </button>
             <button mat-icon-button style = "margin-right: 6.5%;" color = "primary"
-                [disabled] = "exhibitedUpperIndex === layer.pointsQuantity">
+                [disabled] = "exhibitedUpperIndex === layer.pointsQuantity" (click) = "tablePaginatorNextPage()">
                     <span class = "material-icons">east</span>
             </button>
         </div>
