--- a/src/app/mapping-module/mapping/mapping.component.css
+++ b/src/app/mapping-module/mapping/mapping.component.css
@@ -36,3 +36,46 @@
     text-align: left;
     margin-left: 16%;
 }
+table{
+    width: 100%;
+}
+#circle1{
+    background: blue;
+    border-radius: 50%;
+    width: 0.70vw;
+    height: 1.40vh;
+
+}
+#circle2{
+    background: yellow;
+    border-radius: 50%;
+    width: 0.70vw;
+    height: 1.40vh;
+}
+#circle3{
+    background: red;
+    border-radius: 50%;
+    width: 0.70vw;
+    height: 1.40vh;
+}
+#circle4{
+    background: green;
+    border-radius: 50%;
+    width: 0.70vw;
+    height: 1.40vh;
+}
+#circle5{
+    background: rgb(139, 0, 0);
+    border-radius: 50%;
+    width: 0.70vw;
+    height: 1.40vh;
+}
+#circleSeletor{
+    background: black;
+    border-radius: 50%;
+    width: 0.70vw;
+    height: 1.40vh;
+}
+.classColumn{
+    margin-left: 10vw;
+}
