--- a/src/app/rectification-form/rectification-form.component.html
+++ b/src/app/rectification-form/rectification-form.component.html
@@ -68,19 +68,54 @@
             </mat-card-content>
         </mat-card>
     </mat-card-content>
-    <div>
 
-        <div>
+    <div class="fileImportAndInformation">
+
+        <div class="actions">
             <input #fileInput type="file" (change)="recieveNewArchive($event)" style="display: none;">
-            <button mat-flat-button color = "primary" (click) = "fileInput.click()">Importar arquivo</button>
-            <button mat-flat-button color = "primary" (click) = "goToFileEditor()">Editar arquivo</button>
-            <button mat-flat-button color = "primary">Exportar zona de manejo</button>
+            <button class="simpleButtons" mat-button (click) = "fileInput.click()">
+                <span class="material-icons">
+                    add_circle_outline
+                </span>
+                Importar Zona de Manejo
+            </button>
+            <br>
+            <button style="margin-left: 15%;" class="simpleButtons" mat-button (click) = "goToFileEditor()">
+                <span class="material-icons">
+                    create
+                </span>
+                Editar arquivo
+            </button>
+            <br>
+            <button class="simpleButtons" mat-button>
+                <span class="material-icons">
+                    arrow_upward
+                </span>
+                Exportar zona de manejo
+            </button>
         </div>
 
-        <div>
-
+        <div class="fileInformation">
+            <mat-form-field style="margin-right: 1vw;" class="fileInformationFields" appearance="outline">
+                <mat-label>Nome do Arquivo</mat-label>
+                <input matInput [value] = "fileName" color="primary">
+            </mat-form-field>
+            <mat-form-field class="fileInformationFields" appearance="outline">
+                <mat-label>Tamanho</mat-label>
+                <input matInput [value] = "fileSize" color="primary">
+            </mat-form-field>
+            <br>
+            <mat-form-field style="margin-right: 1vw;" class="fileInformationFields" appearance="outline">
+                <mat-label>Extensão</mat-label>
+                <input matInput [value] = "fileExtension" color="primary">
+            </mat-form-field>
+            <mat-form-field class="fileInformationFields" appearance="outline">
+                <mat-label>Número de Pontos</mat-label>
+                <input matInput [value] = "fileExtension" color="primary">
+            </mat-form-field>
         </div>
     </div>
+
     <div style="text-align: center;">
         <button class="mainButton" [disabled] = "fileName === '--'" (click) = "executeRectification()" mat-raised-button>
             <span class="material-icons">
