--- a/src/app/mapping-module/mapping/mapping.component.html
+++ b/src/app/mapping-module/mapping/mapping.component.html
@@ -95,8 +95,8 @@
             Download Mapa
         </button>
 
-        <button mat-button color = "primary" class="downloadJpgButton" (click) = "downloadRectifiedTxt()">
-            Layer Retificada .txt
+        <button mat-button color = "primary" class="downloadJpgButton" (click) = "exportLayer()">
+            Exportar ZM Retificada
         </button>
     </mat-sidenav>
     
