--- a/src/app/rectification-form/rectification-form.component.html
+++ b/src/app/rectification-form/rectification-form.component.html
@@ -87,7 +87,7 @@
                 Editar arquivo
             </button>
             <br>
-            <button class="simpleButtons" mat-button>
+            <button (click) = "exportOriginalLayer()" class="simpleButtons" mat-button>
                 <span class="material-icons">
                     arrow_upward
                 </span>
@@ -111,13 +111,13 @@
             </mat-form-field>
             <mat-form-field class="fileInformationFields" appearance="outline">
                 <mat-label>Número de Pontos</mat-label>
-                <input matInput [value] = "fileExtension" color="primary">
+                <input matInput [value] = "fileSamplingPointsQuantity" color="primary">
             </mat-form-field>
         </div>
     </div>
 
     <div style="text-align: center;">
-        <button class="mainButton" [disabled] = "fileName === '--'" (click) = "executeRectification()" mat-raised-button>
+        <button class="mainButton" (click) = "executeRectification()" mat-raised-button>
             <span class="material-icons">
                 miscellaneous_services
             </span>
