--- a/src/app/rectification-form/rectification-form.component.html
+++ b/src/app/rectification-form/rectification-form.component.html
@@ -117,6 +117,12 @@
     </div>
 
     <div style="text-align: center;">
+        <button class="mainButton" style="margin-right: 1vw;" (click) = "visualizeOriginalLayerMap()" mat-raised-button>
+            <span class="material-icons">
+                map
+            </span>
+            Visualizar Mapa Temático
+        </button>
         <button class="mainButton" (click) = "executeRectification()" mat-raised-button>
             <span class="material-icons">
                 miscellaneous_services
