--- a/src/app/mapping-module/map-exhibition/single-layer-map/single-layer-map.component.html
+++ b/src/app/mapping-module/map-exhibition/single-layer-map/single-layer-map.component.html
@@ -76,6 +76,9 @@
         </button>
 
         <button mat-button color = "primary" class="downloadJpgButton" (click) = "exportLayer()">
+            <span class="material-icons">
+                north
+            </span>
             Exportar ZM
         </button>
     </mat-sidenav>
