--- a/src/app/management-zone-editor/save-layer-alterations/save-layer-alterations.component.css
+++ b/src/app/management-zone-editor/save-layer-alterations/save-layer-alterations.component.css
@@ -1,6 +1,6 @@
 .dialogTitle{
     font-size: x-large;
-    margin-left: 16%;
+    margin-left: 3vw;
 }
 .dialogMatCard{
     background-color: whitesmoke;
