--- a/src/app/management-zone-editor/save-layer-alterations/save-layer-alterations.component.html
+++ b/src/app/management-zone-editor/save-layer-alterations/save-layer-alterations.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color = "primary">
-    <span class = "dialogTitle">Salvar Alterações</span>
+    <span class = "dialogTitle">Salvar Dados</span>
 </mat-toolbar>
 <br>
 <mat-card class="dialogMatCard">
