--- a/src/app/rectification-form/rectification-form.component.html
+++ b/src/app/rectification-form/rectification-form.component.html
@@ -102,7 +102,7 @@
             </mat-form-field>
             <mat-form-field class="fileInformationFields" appearance="outline">
                 <mat-label>Tamanho</mat-label>
-                <input matInput [value] = "fileSize" color="primary">
+                <input matInput [value] = "layer.fileSize" color="primary">
             </mat-form-field>
             <br>
             <mat-form-field style="margin-right: 1vw;" class="fileInformationFields" appearance="outline">
